# TAU-F1-Object-Detection

./: .gitignore  README.MD  README.txt  common.py  common_functions.py  cvt2yolo.py  formats.txt  requirements.txt  searchFile.py
Camera/DETR/: base_json.json  commands.txt  cvt2detr.py  dataset_functions.py
Camera/DETR/data preprocess/: cvt2detr.py  dataset_consts.py  model_consts.py
Camera/DETR/training/: DETR training.ipynb
Camera/ROS/: CameraNode.h  Start ROS.txt  main.cpp
Camera/ROS/C++/: camera_node.out
Camera/ROS/CameraNode/: CameraNode.cpp  (+2 more)
Camera/ROS/camera_object_detection_node/: CMakeLists.txt  package.xml
Camera/ROS/camera_object_detection_node/src/: CameraObjectDetectionNode.h
Camera/ROS/camera_object_detection_node/src/Model/: model.h
Camera/YOLOv5/: commands.txt  cvt2yolo.py  dataset_functions.py
Camera/ZED Camera Usage/: depth_sensing.py  test.py
Camera/common/: consts.py  functions.py
Camera/dataset analysis/: analyze_dataset.py
Camera/dataset_analysis/: bbx_analysis.py  fix_class_imb.py  remove_small_bbx.py
DETR/: commands.txt  consts.py  cvt2detr.py  dataset_consts.py  dataset_format.txt  dataset_functions.py  model_consts.py
DETR/detr/: commands.txt  engine.py  main.py
Lidar/common/: README.txt
Lidar/preprocessing/: PullLiveFrames.py  lidar_record_preprocess.py
Lidar/processing/: PullLiveFrames.py  classes.py  lidar_record_preprocess.py  recording_processing.py
YOLOv5/: command.txt  commands.txt  consts.py  cvt2yolo.py  dataset.yaml  dataset_consts.py  dataset_functions.py
YOLOv5/yaml/: dataset.yaml  hyp.yaml
(+100 files in other folders)
